--- a/frontend/news-parser-frontend/src/styles/TagFormComponentCss.css
+++ b/frontend/news-parser-frontend/src/styles/TagFormComponentCss.css
@@ -3,3 +3,14 @@
     width: 100%;
     text-align: center;
 }
+
+.btn:focus{
+    outline: none !important ;
+    box-shadow: none !important ;
+    background-color: #0d6efd !important;
+    border-color: #0d6efd !important;
+  }
+
+
+
+  
