--- a/frontend/news-parser-frontend/src/styles/TagFormComponentCss.css
+++ b/frontend/news-parser-frontend/src/styles/TagFormComponentCss.css
@@ -11,6 +11,14 @@
     border-color: #0d6efd !important;
   }
 
+  /* body {
+    padding-bottom: 120px;
+} */
 
+footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
 
   
