--- a/newsparser/news-parser-frontend/src/styles/Footer.css
+++ b/newsparser/news-parser-frontend/src/styles/Footer.css
@@ -1,8 +1,44 @@
 
 .main-body {
-    padding-bottom: 17rem!important;
+    /* padding-bottom: 17rem!important; */
+
 }
 
-footer {
-    position: relative;
+body {
+    overflow:auto;
+    min-height: 100vh;
 }
+
+#root {
+    height: 100vh;
+}
+
+.Home {
+    height: 100vh;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* footer {
+    position: relative;
+} */
+
+
+footer {
+    margin-top: auto;
+    bottom: 0;
+    padding-top:20px;
+  }
+
+  /* .fixed-bottom {
+    position: fixed;
+    margin: auto;
+    height: 100px;
+    width: 100%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1030;
+} */
